--- a/web.config
+++ b/web.config
@@ -1,5 +1,11 @@
-<system.webServer>
-  <staticContent>
-    <mimeMap fileExtension=".json" mimeType="application/json" />
-  </staticContent>
-</system.webServer>
+<?xml version="1.0"?>
+<configuration>
+    <system.web>
+        <compilation debug="false" targetFramework="4.0" />
+    </system.web>
+    <system.webServer>
+      <staticContent>
+        <mimeMap fileExtension=".json" mimeType="application/json" />
+      </staticContent>
+    </system.webServer>
+</configuration>
