--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
     </system.web>
     <system.webServer>
       <staticContent>
-        <mimeMap fileExtension=".json" mimeType="application/json" />
+        <!-- <mimeMap fileExtension=".json" mimeType="application/json" /> -->
       </staticContent>
     </system.webServer>
 </configuration>
