--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.1",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1.2.0",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.0",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.0",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.0",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.1.1",
       "aurelia-i18n": "npm:aurelia-i18n@^0.5.0",
       "aurelia-loader": "npm:aurelia-loader@^1.0.0-beta.1.2.0",
@@ -48,5 +48,9 @@
         "main": "client/shim.min"
       }
     }
+  },
+  "devDependencies": {
+    "aurelia-bundler": "^0.3.2",
+    "require-dir": "^0.3.0"
   }
 }
