--- a/web.config
+++ b/web.config
@@ -7,5 +7,10 @@
       <staticContent>
         <!-- <mimeMap fileExtension=".json" mimeType="application/json" /> -->
       </staticContent>
+      <caching enabled="true" enableKernelCache="true">
+         <profiles>
+            <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+         </profiles>
+      </caching>
     </system.webServer>
 </configuration>
