--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.4.0",
       "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.5.3",
+      "lodash": "npm:lodash@^4.6.1",
       "text": "github:systemjs/plugin-text@^0.0.4",
       "thomaspark/bootswatch": "github:thomaspark/bootswatch@^3.3.6"
     },
@@ -51,6 +52,8 @@
   },
   "devDependencies": {
     "aurelia-bundler": "^0.3.2",
+    "babel-preset-es2015": "^6.6.0",
+    "gulp-babel": "^6.1.2",
     "require-dir": "^0.3.0"
   }
 }
