--- a/web.config
+++ b/web.config
@@ -6,6 +6,7 @@
     <system.webServer>
       <staticContent>
         <!-- <mimeMap fileExtension=".json" mimeType="application/json" /> -->
+        <mimeMap fileExtension=".md" mimeType="application/text" />
       </staticContent>
       <caching enabled="true" enableKernelCache="true">
          <profiles>
