--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.1.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.0.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
+      "chjj/marked": "github:chjj/marked@^0.3.5",
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.4.0",
       "i18next-xhr-backend": "npm:i18next-xhr-backend@^0.5.3",
       "lodash": "npm:lodash@^4.6.1",
+      "markdown": "npm:markdown@^0.5.0",
       "text": "github:systemjs/plugin-text@^0.0.4",
       "thomaspark/bootswatch": "github:thomaspark/bootswatch@^3.3.6"
     },
