--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "lodash": "npm:lodash@^4.6.1",
       "mammoth": "npm:mammoth@^0.3.33",
       "markdown": "npm:markdown@^0.5.0",
+      "remarkable": "npm:remarkable@^1.6.2",
       "stephen-hardy/DOCX.js": "github:stephen-hardy/DOCX.js@master",
       "text": "github:systemjs/plugin-text@^0.0.4",
       "thomaspark/bootswatch": "github:thomaspark/bootswatch@^3.3.6"
